--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
